# hospitalSystem-C-Qt-

./: CMakeLists.txt  Patient.h  README.md  Tools.h  appointment.cpp  appointment.h  appointment.ui  charge.cpp  charge.h  charge.ui  drug.cpp  drug.h  drug.ui  handle.cpp  handle.h  handle.ui  infomenu.cpp  infomenu.h  infomenu.ui  menu.cpp  menu.h  menu.ui  registmenu.cpp  registmenu.h  registmenu.ui  widget.cpp  widget.h  widget.ui
